--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^6.10.0",
-    "nodemon": "^2.0.22"
+    "mongoose": "^5.10.13",
+    "nodemon": "^2.0.22",
+    "validator": "^13.9.0"
   }
 }
